<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_server_address"
        android:key="server_addr_text"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/pref_title_server_settings" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_server_path"
        android:key="server_path_text"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/pref_title_server_path_settings" />
</PreferenceScreen>
